[package]
name = "adb-mqtt"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "=0.6.2"
config = "=0.13.4"
eyre = "=0.6.11"
rand = "=0.8.5"
rumqttc = "=0.23.0"
serde = "=1.0.196"
serde_json = "=1.0.113"
tokio = { version = "=1.35.1", features = ["macros", "rt", "rt-multi-thread", "time", "process", "sync", "signal"] }
