[package]
name = "adb-mqtt"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "=0.6.5"
config = "=0.15.13"
eyre = "=0.6.12"
rand = "=0.8.5"
rumqttc = "=0.25.0"
serde = "=1.0.228"
serde_json = "=1.0.145"
tokio = { version = "=1.48.0", features = ["macros", "rt", "rt-multi-thread", "time", "process", "sync", "signal"] }
